--- a/app/src/main/res/layout/activity_password_creator.xml
+++ b/app/src/main/res/layout/activity_password_creator.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".PasswordCreator"
     android:background="@drawable/hack">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="264dp"
-        android:layout_height="387dp"
+        android:layout_width="307dp"
+        android:layout_height="511dp"
         android:background="@drawable/roundbox"
         android:backgroundTint="#DA2EBFBE"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,32 +19,48 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/loginUser"
-            android:layout_width="210dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="20dp"
+            android:id="@+id/encrypt"
+            android:layout_width="202dp"
+            android:layout_height="49dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="12dp"
             android:background="@android:color/black"
             android:shadowColor="#000000"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="2"
-            android:text="Login"
+            android:text="Encrypt"
             android:textColor="#FBFBFB"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/forgotPass" />
+            app:layout_constraintTop_toBottomOf="@+id/re_password_input" />
+
+        <Button
+            android:id="@+id/back"
+            android:layout_width="202dp"
+            android:layout_height="49dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="104dp"
+            android:background="@android:color/black"
+            android:shadowColor="#000000"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="2"
+            android:text="home"
+            android:textColor="#FBFBFB"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/encrypt" />
 
         <EditText
-            android:id="@+id/emailLogin"
+            android:id="@+id/password_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="12dp"
             android:background="#FFFFFF"
             android:backgroundTint="#8FFFFFFF"
             android:ems="10"
             android:fontFamily="serif-monospace"
-            android:hint="Email"
+            android:hint="Title"
             android:inputType="textPersonName"
             android:lineSpacingExtra="0sp"
             android:minHeight="48dp"
@@ -53,13 +69,13 @@
             android:textColorHint="#000000"
             android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
-            android:id="@+id/passwordLogin"
+            android:id="@+id/password_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="52dp"
             android:layout_marginTop="12dp"
             android:background="@color/white"
             android:backgroundTint="#8FFFFFFF"
@@ -73,30 +89,36 @@
             android:textColorHint="#000000"
             android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailLogin" />
+            app:layout_constraintTop_toBottomOf="@+id/password_title" />
 
-        <TextView
-            android:id="@+id/registerLink"
+        <EditText
+            android:id="@+id/re_password_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="4dp"
-            android:fontFamily="sans-serif"
-            android:text="Don't have an account?\nSign Up!"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/white"
+            android:backgroundTint="#8FFFFFFF"
+            android:ems="10"
+            android:fontFamily="serif-monospace"
+            android:hint="Re-Password"
+            android:inputType="textPersonName|textPassword"
+            android:minHeight="48dp"
             android:textAlignment="center"
             android:textColor="#000000"
-            android:textStyle="bold"
+            android:textColorHint="#000000"
+            android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
+            app:layout_constraintTop_toBottomOf="@+id/password_input" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textView"
             android:layout_width="216dp"
             android:layout_height="78dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="52dp"
             android:layout_marginTop="16dp"
             android:fontFamily="serif-monospace"
-            android:text="Password\nManager"
+            android:text="Create\nPassword"
             android:textAlignment="center"
             android:textColor="#DA000000"
             android:textSize="34sp"
@@ -105,28 +127,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/forgotPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="76dp"
-            android:layout_marginTop="16dp"
-            android:text="Forgot Password?"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textStyle="italic"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registerLink" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/debug"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:text="debug"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
